--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textColor="#000"
-        />
-    <ImageView
-        android:src="@drawable/qiutian"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
+    <fragment
+        android:id="@+id/choose_area_frament"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="123456s"
-        android:textColor="#000"
-        android:textSize="20sp"
+        android:layout_height="match_parent"
+        android:name="com.example.lei.happyweather.ChooseAreaFragment"
         />
-</LinearLayout>
+
+</FrameLayout>
