--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -5,28 +5,28 @@
     android:layout_height="match_parent"
     android:background="#fff"
     >
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        >
+        android:background="?attr/colorPrimary">
+
         <TextView
             android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textColor="#fff"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
+
         <Button
             android:id="@+id/back_button"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginLeft="10dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/ic_launcher_background"
-            />
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/homepage" />
         <!--此处返回图标-->
     </RelativeLayout>
     <ListView
