--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -13,6 +13,7 @@
         android:textColor="#fff"
         android:textSize="60sp"
         />
+    <!--显示气温-->
     <TextView
         android:id="@+id/weather_info_text"
         android:layout_width="wrap_content"
@@ -21,5 +22,5 @@
         android:textColor="#fff"
         android:textSize="20sp"
         />
-
+    <!--显示天气-->
 </LinearLayout>
